# CrossCompileForAndroid

./: README.md
c/: CMakeLists.txt  CTest.c
java/: com_jni_JTest.h
java/com/jni/: JTest.java
